--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
    <application
-        android:label="calendar_app"
+        android:label="V-Calendar"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
